--- a/1. product-service/package.json
+++ b/1. product-service/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "config": "^3.3.12",
     "eureka-js-client": "^4.5.0",
