--- a/1. product-service/package.json
+++ b/1. product-service/package.json
@@ -18,9 +18,13 @@
     "config": "^3.3.12",
     "eureka-js-client": "^4.5.0",
     "express": "^4.21.1",
-    "morgan": "^1.10.0",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.0.2",
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0",
+    "winston-logstash-transport": "^2.0.0",
+    "winston-logstash-ts": "^0.2.3",
     "zod": "^3.23.8"
   }
 }
