--- a/3. inventory-service/package.json
+++ b/3. inventory-service/package.json
@@ -4,7 +4,8 @@
   "description": "Responsibilities: Tracks product stock levels and updates based on purchases or restocking. Provides inventory status to Product Service and Cart Service. Endpoints: GET /inventory/:productId: Get inventory for a product. PUT /inventory/:productId: Update stock levels",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "pm2 start app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx sequelize-cli db:migrate",
     "create-migration": "npx sequelize-cli migration:create --name"
