--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "node server.js",
+    "start": "pm2 start server.js"
   },
   "keywords": [],
   "author": "",
