--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -8,11 +8,14 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
+# Install PM2 globally
+RUN npm install -g pm2
+
 # Copy the rest of the application code
 COPY . .
 
 # Expose port that your service is running on
 EXPOSE 3000
 
-# Command to run your application
-CMD ["npm", "start"]
+# Command to run your application using PM2
+CMD ["pm2-runtime", "start", "server.js"]
