--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "start": "node server.js"
+    "start": "pm2-runtime start server.js"
   },
   "keywords": [],
   "author": "",
